fixing role edit toggle & adjust notifikasi coin approval permission

--- a/src/app/pages/dte/coin-adjustment-approval/detail/coin-adjustment-approval-detail.component.html
+++ b/src/app/pages/dte/coin-adjustment-approval/detail/coin-adjustment-approval-detail.component.html
@@ -7,7 +7,7 @@
     <div class="ayo-main-wrapper mat-white-bg p-0" fxLayout="column" fusePerfectScrollbar>
       <div class="px-24" fxLayout="row" fxLayoutAlign="space-between center">
         <h2>Detail Approval Coin Adjustment</h2>
-        <div *ngIf="permissionNotifikasi">
+        <div *ngIf="permissionNotifikasi?.lihat">
           <button mat-raised-button type="button" class="confirmation-button" style="border-radius: 5px;"
             (click)="sendNotification()">
             <mat-icon>circle_notifications</mat-icon>
