--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -194,8 +194,9 @@
                   <mat-checkbox (change)="isPromo($event)" class="mt-4 ml-4 mb-8" formControlName="is_promo_src">Produk
                     Pilihan SRC</mat-checkbox>
                   <mat-checkbox (change)="isPrivateLabel($event)" class="mt-4 ml-4 mb-8"
-                    formControlName="is_private_label">Produk
-                    Prinsipal</mat-checkbox>
+                    formControlName="is_private_label">Produk Prinsipal</mat-checkbox>
+                  <mat-checkbox class="mt-4 ml-4 mb-8"
+                    formControlName="is_paylater">Produk Pilihan Pojok Modal</mat-checkbox>
                 </div>
               </div>
               <div class="" formArrayName="areas"
