CDE-3359-pojok-modal-src-menu-adjustment: - add new filter berminat (paylater activation src) - export template (paylater activation src)

--- a/src/app/pages/pay-later/pay-later-activation/pay-later-activation-src/pay-later-activation-src.component.html
+++ b/src/app/pages/pay-later/pay-later-activation/pay-later-activation-src/pay-later-activation-src.component.html
@@ -3,6 +3,12 @@
   <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
     <h2 class="pl-8">Pengajuan Aktivasi SRC</h2>
     <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
+      <div class="button-row">
+        <button mat-stroked-button style="width: 160px" color="white" (click)="_export()">
+          <mat-icon>vertical_align_top</mat-icon> Export Template
+        </button>
+      </div>
+
       <mat-icon>search</mat-icon>
       <mat-form-field class="is-light tab-search">
         <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
