--- a/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
+++ b/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
@@ -1,11 +1,14 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Buat Coin Disburstment'">
+  <page-content-header [contentTitle]="(isEdit ? 'Edit' : 'Buat' ) + ' Coin Disburstment'">
+    <button style="width: 170px" (click)="submit()" mat-raised-button type="button" *ngIf="!isEdit">
+      <mat-icon>save</mat-icon> SIMPAN
+    </button>
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
     <div class="table-wrapper">
-      <mat-tab-group>
+      <mat-tab-group [selectedIndex]="selectedTab">
         <mat-tab label="Penukaran Coin">
           <div class="ayo-middle py-24" fxLayout="column">
             <form autocomplete="off" [formGroup]="formCoin">
@@ -36,8 +39,7 @@
                 fxFlex="50%">
                 <mat-form-field fxFlex="50%" class="is-light form-primary">
                   <input matInput formControlName="start_date" [min]="minDate" (focus)="startDate.open()"
-                    [matDatepicker]="startDate" placeholder="Tanggal Awal Penukaran Koin"
-                    (dateChange)="setMinEndDate()">
+                    [matDatepicker]="startDate" placeholder="Tanggal Awal Penukaran Koin">
                   <mat-datepicker-toggle matSuffix [for]="startDate">
                     <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
                   </mat-datepicker-toggle>
@@ -50,7 +52,7 @@
 
                 <mat-form-field fxFlex="50%" class="is-light form-primary">
                   <input matInput formControlName="end_date" (focus)="endDate.open()" [matDatepicker]="endDate"
-                    placeholder="Tanggal Berakhir Penukaran Koin" [min]="minDate" (dateChange)="setMinExpireDate()">
+                    placeholder="Tanggal Berakhir Penukaran Koin" [min]="minDate">
                   <mat-datepicker-toggle matSuffix [for]="endDate">
                     <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
                   </mat-datepicker-toggle>
@@ -245,6 +247,11 @@
                 </ng-template>
               </ngx-datatable-column>
             </ngx-datatable>
+          </div>
+          <div class="confirm pt-24 pb-24 pl-24" fxLayout="row" fxLayoutGap="20px" *ngIf="isEdit">
+            <button mat-raised-button type="button" class="confirmation-button" (click)="submit()" fxFlex="20">
+              {{ isEdit && detailCoin.status === 'publish' ? 'UNPUBLISH' : 'SIMPAN' }}
+            </button>
           </div>
         </mat-tab>
       </mat-tab-group>
