--- a/src/app/pages/dte/coin-disburstment/index/exchange/coin-disburstment-exchange.component.html
+++ b/src/app/pages/dte/coin-disburstment/index/exchange/coin-disburstment-exchange.component.html
@@ -73,74 +73,112 @@
     </div>
   </form>
 </div>
-<ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
-  [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56" [rowHeight]="48"
-  [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable" [count]="pagination.total"
-  [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
-  (sort)="onSort($event)">
+<div class="px-16 py-8">
+  <form [formGroup]="formFilterExchange" autoComplete="off">
+    <div fxLayout="row wrap" fxLayoutAlign="start" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="20px"
+      fxLayoutGap.lt-md="0px">
+      <!-- <mat-form-field fxFlex="12%" class="is-light form-primary">
+        <input matInput type="text" placeholder="Group Trade Program" formControlName="group_trade_program" name="group_trade_program">
+      </mat-form-field> -->
+      <mat-form-field fxFlex="12%" class="is-light form-primary">
+        <mat-select placeholder="Group Trade Program" formControlName="group_trade_program" multiple>
+          <mat-option *ngFor="let item of groupTradePrograms" [value]="item.id">{{item.name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field fxFlex="12%" class="is-light form-primary">
+        <input matInput type="text" placeholder="Nama Penukaran Koin" formControlName="name" name="name">
+      </mat-form-field>
+      <mat-form-field fxFlex="12%" class="is-light form-primary">
+        <mat-select placeholder="Opsi Penukaran" formControlName="opsi_penukaran">
+          <mat-option *ngFor="let item of tradeOptions" [value]="item.id">{{item.name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field fxFlex="12%" class="is-light form-primary">
+        <mat-select placeholder="Status Pembayaran" formControlName="payment_status">
+          <mat-option *ngFor="let item of paymentStatuses" [value]="item.id">{{item.name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </form>
+</div>
+<div class="p-16">
+  <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
+    fxLayoutAlign="end center" class="p-16 export">
+    <!-- <button mat-raised-button type="button" class="is-danger" (click)="importAudience()">
+  <mat-icon>arrow_downward</mat-icon> Import XLS
+</button> -->
+    <button mat-raised-button type="button" class="is-danger" (click)="exportExchange()">
+      <mat-icon>arrow_upward</mat-icon> Export XLS
+    </button>
+  </div>
+  <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
+    [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
+    [rowHeight]="48" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable"
+    [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
+    (page)="setPage($event)" (sort)="onSort($event)">
 
-  <ngx-datatable-column [width]="200" name="Nama Program Penukaran" prop="name" [flexGrow]="3">
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" name="Nama Program Penukaran" prop="name" [flexGrow]="3">
+    </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="200" name="Retailer Code" prop="retailer_code">
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" name="Retailer Code" prop="retailer_code">
+    </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="200" name="Toko SRC" prop="retailer_name">
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" name="Toko SRC" prop="retailer_name">
+    </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="200" name="Area" prop="area_code">
-  </ngx-datatable-column>
-  <ngx-datatable-column [width]="200" name="Regional" prop="division_code">
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" name="Area" prop="area_code">
+    </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" name="Regional" prop="division_code">
+    </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="200" name="Opsi Penukaran" prop="opsi_penukaran">
-    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-      <span class="row-name" style="text-transform: capitalize;">{{row.opsi_penukaran}}</span>
-    </ng-template>
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" name="Opsi Penukaran" prop="opsi_penukaran">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+        <span class="row-name" style="text-transform: capitalize;">{{row.opsi_penukaran}}</span>
+      </ng-template>
+    </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="200" name="Group Trade Program" prop="group_trade_program_name">
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" name="Group Trade Program" prop="group_trade_program_name">
+    </ngx-datatable-column>
 
-  <!-- Butuh Konfirmasi Om Harry -->
-  <ngx-datatable-column [width]="200" name="Nominal Penukaran" prop="nominal_pembayaran">
-    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-      <span class="row-name">{{row.nominal_pembayaran | rupiahFormater}}</span>
-    </ng-template>
-  </ngx-datatable-column>
+    <!-- Butuh Konfirmasi Om Harry -->
+    <ngx-datatable-column [width]="200" name="Nominal Penukaran" prop="coin_valuation">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+        <span class="row-name">{{(row.coin * row.coin_valuation) | rupiahFormaterWithoutRp}}</span>
+      </ng-template>
+    </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="200" name="Jumlah Koin yang ditukar" prop="coin">
-    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-      <span class="row-name">{{row.coin | rupiahFormaterWithoutRp}}</span>
-    </ng-template>
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" name="Jumlah Koin yang ditukar" prop="coin">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+        <span class="row-name">{{row.coin | rupiahFormaterWithoutRp}}</span>
+      </ng-template>
+    </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="200" [sortable]="false" name="Tanggal Request" prop="request_date" [flexGrow]="3">
-    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-      <span>{{row.request_date | dateToMoment}}</span>
-    </ng-template>
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" [sortable]="false" name="Tanggal Request" prop="request_date" [flexGrow]="3">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+        <span>{{row.request_date | dateToMoment}}</span>
+      </ng-template>
+    </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="200" name="Status Pembayaran" prop="opsi_penukaran">
-    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-      <span class="row-name" style="text-transform: capitalize;">{{row.status_pembayaran ? row.status_pembayaran :
-        "-"}}</span>
-    </ng-template>
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" name="Status Pembayaran" prop="opsi_penukaran">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+        <span class="row-name" style="text-transform: capitalize;">{{row.status_pembayaran ? row.status_pembayaran :
+          "-"}}</span>
+      </ng-template>
+    </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="200" [sortable]="false" name="Tanggal Pembayaran" prop="payment_date" [flexGrow]="3">
-    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-      <span>{{row.payment_date | dateToMoment}}</span>
-    </ng-template>
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" [sortable]="false" name="Tanggal Pembayaran" prop="payment_date" [flexGrow]="3">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+        <span>{{row.payment_date | dateToMoment}}</span>
+      </ng-template>
+    </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="200" name="Nominal Pembayaran" prop="nominal_pembayaran">
-    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-      <span class="row-name">{{row.nominal_pembayaran | rupiahFormater}}</span>
-    </ng-template>
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" name="Nominal Pembayaran" prop="nominal_pembayaran">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+        <span class="row-name">{{row.nominal_pembayaran | rupiahFormater}}</span>
+      </ng-template>
+    </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="200" name="Reason" prop="reason">
-  </ngx-datatable-column>
+    <ngx-datatable-column [width]="200" name="Reason" prop="reason">
+    </ngx-datatable-column>
 
-</ngx-datatable>
+  </ngx-datatable>
