--- a/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
+++ b/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
@@ -217,13 +217,16 @@
               [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
               [selectAllRowsOnPage]="false" [externalSorting]="true" (page)="setPage($event)"
               [sorts]="[{ prop: 'name', dir: 'asc' }]" (select)="onSelect($event)" [rowIdentity]="getId"
-              (sort)="onSort($event)" fusePerfectScrollbar>
+              (sort)="onSort($event)" fusePerfectScrollbar #table>
 
               <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true">
-                <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
-                  let-selectFn="selectFn">
+                <ng-template ngx-datatable-header-template let-value="value">
                   <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected)"></mat-checkbox>
                 </ng-template>
+
+                <!-- <ng-template ngx-datatable-header-template let-value="value">
+                  <mat-checkbox [checked]="selectAllOnPage[pageOffset]" (change)="selectAll($event)"></mat-checkbox>
+                </ng-template> -->
 
                 <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected"
                   let-onCheckboxChangeFn="onCheckboxChangeFn">
@@ -246,6 +249,23 @@
                   <span *ngIf="row.status === 'not-registered'">No</span>
                 </ng-template>
               </ngx-datatable-column>
+              <ngx-datatable-footer>
+                <ng-template ngx-datatable-footer-template let-rowCount="rowCount" let-pageSize="pageSize"
+                  let-selectedCount="selectedCount" let-curPage="curPage" let-offset="offset">
+                  <div style="padding: 10px 10px">
+                    <div *ngIf="allRowsSelected"><strong>{{ rowCount | rupiahFormaterWithoutRp }}</strong> Terpilih
+                    </div>
+                    <div *ngIf="!allRowsSelected">
+                      {{ selected.length | rupiahFormaterWithoutRp }} / {{ rowCount | rupiahFormaterWithoutRp}} Terpilih
+                    </div>
+                  </div>
+                  <datatable-pager [pagerLeftArrowIcon]="'datatable-icon-left'"
+                    [pagerRightArrowIcon]="'datatable-icon-right'" [pagerPreviousIcon]="'datatable-icon-prev'"
+                    [pagerNextIcon]="'datatable-icon-skip'" [page]="curPage" [size]="pageSize" [count]="rowCount"
+                    [hidden]="!((rowCount / pageSize) > 1)" (change)="table.onFooterPage($event)">
+                  </datatable-pager>
+                </ng-template>
+              </ngx-datatable-footer>
             </ngx-datatable>
           </div>
           <div class="confirm pt-24 pb-24 pl-24" fxLayout="row" fxLayoutGap="20px" *ngIf="isEdit">
@@ -253,6 +273,7 @@
               {{ isEdit && detailCoin.status === 'publish' ? 'UNPUBLISH' : 'SIMPAN' }}
             </button>
           </div>
+          <a #downloadLink></a>
         </mat-tab>
       </mat-tab-group>
     </div>
