--- a/src/app/pages/dte/coin-disburstment/index/exchange/coin-disburstment-exchange.component.html
+++ b/src/app/pages/dte/coin-disburstment/index/exchange/coin-disburstment-exchange.component.html
@@ -80,12 +80,12 @@
       <!-- <mat-form-field fxFlex="12%" class="is-light form-primary">
         <input matInput type="text" placeholder="Group Trade Program" formControlName="group_trade_program" name="group_trade_program">
       </mat-form-field> -->
-      <mat-form-field fxFlex="12%" class="is-light form-primary">
+      <mat-form-field fxFlex="25%" class="is-light form-primary">
         <mat-select placeholder="Group Trade Program" formControlName="group_trade_program" multiple>
           <mat-option *ngFor="let item of groupTradePrograms" [value]="item.id">{{item.name}}</mat-option>
         </mat-select>
       </mat-form-field>
-      <mat-form-field fxFlex="12%" class="is-light form-primary">
+      <mat-form-field fxFlex="18%" class="is-light form-primary">
         <input matInput type="text" placeholder="Nama Penukaran Koin" formControlName="name" name="name">
       </mat-form-field>
       <mat-form-field fxFlex="12%" class="is-light form-primary">
@@ -104,9 +104,10 @@
 <div class="p-16">
   <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
     fxLayoutAlign="end center" class="p-16 export">
-    <!-- <button mat-raised-button type="button" class="is-danger" (click)="importAudience()">
-  <mat-icon>arrow_downward</mat-icon> Import XLS
-</button> -->
+    <button mat-raised-button type="button" class="is-danger" ngfSelect [(file)]="file" accept=".xls"
+      (fileChange)="onDocUpload($event)">
+      <mat-icon>arrow_downward</mat-icon> Import XLS
+    </button>
     <button mat-raised-button type="button" class="is-danger" (click)="exportExchange()">
       <mat-icon>arrow_upward</mat-icon> Export XLS
     </button>
@@ -182,3 +183,5 @@
     </ngx-datatable-column>
 
   </ngx-datatable>
+  <a #downloadLink></a>
+</div>
