--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -219,6 +219,12 @@
             </mat-form-field>
           </div>
 
+          <div fxLayout="row" class="pb-24 px-24">
+            <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="send_ayo">
+              Send from AYO SRC
+            </mat-checkbox>
+          </div>
+
           <div fxLayout="row" *ngIf="typeOfRecurrence == 'Recurring'">
             <mat-form-field fxFlex="45" class="is-light form-primary">
               <mat-select placeholder="Pola Pengulangan" formControlName="recurrence_type"
