--- a/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
+++ b/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
@@ -38,8 +38,8 @@
               <div fxLayout="row" class="px-24" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
                 fxFlex="50%">
                 <mat-form-field fxFlex="50%" class="is-light form-primary">
-                  <input matInput formControlName="start_date" [min]="minDate" (focus)="startDate.open()"
-                    [matDatepicker]="startDate" placeholder="Tanggal Awal Penukaran Koin">
+                  <input matInput formControlName="start_date" (focus)="startDate.open()" [matDatepicker]="startDate"
+                    placeholder="Tanggal Awal Penukaran Koin">
                   <mat-datepicker-toggle matSuffix [for]="startDate">
                     <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
                   </mat-datepicker-toggle>
@@ -52,7 +52,7 @@
 
                 <mat-form-field fxFlex="50%" class="is-light form-primary">
                   <input matInput formControlName="end_date" (focus)="endDate.open()" [matDatepicker]="endDate"
-                    placeholder="Tanggal Berakhir Penukaran Koin" [min]="minDate">
+                    placeholder="Tanggal Berakhir Penukaran Koin">
                   <mat-datepicker-toggle matSuffix [for]="endDate">
                     <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
                   </mat-datepicker-toggle>
