--- a/src/app/pages/dte/coin-disburstment/index/exchange/coin-disburstment-exchange.component.html
+++ b/src/app/pages/dte/coin-disburstment/index/exchange/coin-disburstment-exchange.component.html
@@ -86,7 +86,7 @@
         </mat-select>
       </mat-form-field>
       <mat-form-field fxFlex="18%" class="is-light form-primary">
-        <input matInput type="text" placeholder="Nama Penukaran Koin" formControlName="name" name="name">
+        <input matInput type="text" placeholder="Nama Program Penukaran Koin" formControlName="name" name="name">
       </mat-form-field>
       <mat-form-field fxFlex="12%" class="is-light form-primary">
         <mat-select placeholder="Opsi Penukaran" formControlName="opsi_penukaran">
